export const snapshot = {};

snapshot[`nu / linux / add 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/add?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/add'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

opPrintInfo r#'id: wut virt add | add on local
aliases: a, ad, in, install
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / linux / find 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/find?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

\$env.VIRT_OP = r#'find'#

do {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use virt (remote) [y, [n]]: '#
  }
  if \$yn != 'n' {
opPrint r#'lxc'#
opPrint r#'podman'#
opPrint r#'  undefined'#
opPrint r#'qemu'#
  }
}
\`
`;

snapshot[`nu / linux / list 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/list?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/list'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

\$env.VIRT_OP = r#'list'#

def deepMerge [base, override] {
  mut result = \$base
  for kv in (\$override | transpose key value) {
    if (\$kv.key in \$result) {
      let baseVal = \$result | get \$kv.key
      let baseDesc = (\$baseVal | describe)
      let overrideDesc = (\$kv.value | describe)
      if (\$baseDesc | str starts-with 'record') and (\$overrideDesc | str starts-with 'record') {
        \$result = \$result | upsert \$kv.key (deepMerge \$baseVal \$kv.value)
      } else if (\$baseDesc | str starts-with 'list') and (\$overrideDesc | str starts-with 'list') {
        \$result = \$result | upsert \$kv.key (\$baseVal | append \$kv.value)
      } else {
        \$result = \$result | upsert \$kv.key \$kv.value
      }
    } else {
      \$result = \$result | upsert \$kv.key \$kv.value
    }
  }
  \$result
}


def virtDockerOp [cmd] {
  let filters = if (\$env.VIRT_INSTANCES | is-not-empty) { \$env.VIRT_INSTANCES } else { [] }
  let allInstances = ^sudo \$cmd compose ls --format json | complete | get stdout | if (\$in | is-not-empty) { from json | get Name } else { [] }
  let instances = if (\$filters | is-not-empty) {
    \$allInstances | where { |i| \$filters | all { |f| \$i | str contains \$f } }
  } else {
    \$allInstances
  }
  let nameFilters = \$instances | each { |i| ['--filter', \$"name=(\$i)"] } | flatten
  opPrintMaybeRunCmd sudo \$cmd container ls --all --format '"table {{.Names}}\\\\\\\\t{{.Image}}\\\\\\\\t{{.Ports}}\\\\\\\\t{{.State}}\\\\\\\\t{{.Status}}"' --no-trunc ...\$nameFilters
}


def virtDocker [] {
  let cmd = 'docker'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$cmd | is-empty) {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtDockerOp \$cmd
}


def virtLxcOp [cmd] {
  let filters = if (\$env.VIRT_INSTANCES | is-not-empty) { \$env.VIRT_INSTANCES } else { [] }
  let allInstances = ^sudo \$"(\$cmd)-ls" | complete | get stdout | split row ' ' | str trim | where { is-not-empty }
  let instances = if (\$filters | is-not-empty) {
    \$allInstances | where { |i| \$filters | all { |f| \$i | str contains \$f } }
  } else {
    \$allInstances
  }
  for instance in \$instances {
    opPrintMaybeRunCmd sudo \$"(\$cmd)-ls" --fancy --fancy-format '"NAME,IPV4,IPV6,STATE,AUTOSTART"' -- \$instance
  }
}


def virtLxc [] {
  let cmd = 'lxc'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$"(\$cmd)-ls" | is-empty) {
    return
  }
  if \$env.VIRT_OP == 'tidy' {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtLxcOp \$cmd
}


def virtPodmanOp [cmd] {
  let kubeDirPath = '/etc/containers/systemd'
  for pod in (if (\$kubeDirPath | path exists) {
    ls \$kubeDirPath
      | where name =~ '\\\\.kube\$'
      | get name
      | each { |f| \$f | path basename | str replace '.kube' '' }
      | if (\$env.VIRT_INSTANCES | is-not-empty) { where { |p| \$env.VIRT_INSTANCES | all { |f| \$p | str contains \$f } } } else { \$in }
  } else { [] }) {
    try { opPrintMaybeRunCmd sudo systemctl status --no-pager --lines 0 \$"(\$pod).service" }
    opPrintMaybeRunCmd sudo \$cmd pod list --filter \$"name=(\$pod)" --format '"table {{.Name}}\\\\t{{.Status}}\\\\t{{.Created}}\\\\t{{.NumberOfContainers}}"'
    opPrintMaybeRunCmd sudo \$cmd container list --filter \$"pod=(\$pod)" --format '"table {{.PodName}}\\\\t{{.Names}}\\\\t{{.Image}}\\\\t{{.Ports}}\\\\t{{.State}}\\\\t{{.Status}}"'
  }
}


def virtPodman [] {
  let cmd = 'podman'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$cmd | is-empty) {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtPodmanOp \$cmd
}


def virtQemuOp [cmd] {
  let serviceDirPath = '/etc/systemd/system'
  for instance in (if (\$serviceDirPath | path exists) {
    ls \$serviceDirPath
      | where name =~ '/qemu-[^/]+\\\\.service\$'
      | get name
      | each { |f| \$f | path basename | str replace 'qemu-' '' | str replace '.service' '' }
      | if (\$env.VIRT_INSTANCES | is-not-empty) { where { |i| \$env.VIRT_INSTANCES | all { |f| \$i | str contains \$f } } } else { \$in }
  } else { [] }) {
    try { opPrintMaybeRunCmd sudo systemctl status --no-pager --lines 0 \$"qemu-(\$instance).service" }
    try { opPrintMaybeRunCmd pgrep --ignore-ancestors --full --list-full \$"^swtpm.*(\$instance)" }
    try { opPrintMaybeRunCmd pgrep --ignore-ancestors --full --list-full \$"^qemu-system.*(\$instance)" }
  }
}


def virtQemu [] {
  let cmd = 'qemu'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$"(\$cmd)-img" | is-empty) {
    return
  }
  if \$env.VIRT_OP == 'tidy' {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtQemuOp \$cmd
}


\$env.VIRT_PODMAN_NETWORKS = r#'{"net0":{"driver":"bridge","interface":"br0","ipam":"dhcp","options":{"mode":"unmanaged"}}}'#

\$env.VIRT_MANAGER = r#'docker'#

\$env.VIRT_INSTANCES = [  ]

virtDocker

hide-env VIRT_MANAGER

\$env.VIRT_MANAGER = r#'lxc'#

\$env.VIRT_INSTANCES = [  ]

virtLxc

hide-env VIRT_MANAGER

\$env.VIRT_MANAGER = r#'podman'#

\$env.VIRT_INSTANCES = [  ]

virtPodman

hide-env VIRT_MANAGER

\$env.VIRT_MANAGER = r#'qemu'#

\$env.VIRT_INSTANCES = [  ]

virtQemu

hide-env VIRT_MANAGER
\`
`;

snapshot[`nu / linux / rem 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/rem?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/rem'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

opPrintInfo r#'id: wut virt rem | remove on local
aliases: r, rm, rem, remove, un, unin, uninstall
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / linux / sync 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/sync?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/sync'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

\$env.VIRT_OP = r#'sync'#

def deepMerge [base, override] {
  mut result = \$base
  for kv in (\$override | transpose key value) {
    if (\$kv.key in \$result) {
      let baseVal = \$result | get \$kv.key
      let baseDesc = (\$baseVal | describe)
      let overrideDesc = (\$kv.value | describe)
      if (\$baseDesc | str starts-with 'record') and (\$overrideDesc | str starts-with 'record') {
        \$result = \$result | upsert \$kv.key (deepMerge \$baseVal \$kv.value)
      } else if (\$baseDesc | str starts-with 'list') and (\$overrideDesc | str starts-with 'list') {
        \$result = \$result | upsert \$kv.key (\$baseVal | append \$kv.value)
      } else {
        \$result = \$result | upsert \$kv.key \$kv.value
      }
    } else {
      \$result = \$result | upsert \$kv.key \$kv.value
    }
  }
  \$result
}


def virtDockerOp [cmd] {
  for instance in \$env.VIRT_INSTANCES {
    opPrintMaybeRunCmd '\$"(' http get --raw --redirect-mode follow \$"r#'(\$env.REQ_URL_CFG)/virt/(\$env.SYS_HOST)/(\$cmd)/(\$instance).yaml'#" ')"' '|' sudo \$cmd compose --file - up --detach --pull always
  }
}


def virtDocker [] {
  let cmd = 'docker'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$cmd | is-empty) {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtDockerOp \$cmd
}


def virtLxcOp [cmd] {
  for instance in \$env.VIRT_INSTANCES {
    if not (\$"/var/lib/lxc/(\$instance)/config" | path exists) {
      continue
    }

    if (^sudo \$"(\$cmd)-ls" --running | complete | get stdout | split row ' ' | str trim | where { |l| \$l | is-not-empty } | any { |l| \$l == \$instance }) {
      opPrintMaybeRunCmd sudo \$"(\$cmd)-stop" --name \$instance
    }

    let addPath = \$env.REQ_PATH | str replace '/sync' '/add' | str replace '/sh/nu/' '/sh/nu/--yes/'
    let addUrl = \$"(\$env.REQ_ORIG)(\$addPath)(\$env.REQ_SRCH)"
    opPrintCmd nu --no-config-file -c '\$"(' http get --raw --redirect-mode follow \$"r#'(\$addUrl)'#" ')"'
    if 'NOOP' not-in \$env {
      nu --no-config-file -c \$"(http get --raw --redirect-mode follow \$addUrl)"
    }
  }
}


def virtLxc [] {
  let cmd = 'lxc'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$"(\$cmd)-ls" | is-empty) {
    return
  }
  if \$env.VIRT_OP == 'tidy' {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtLxcOp \$cmd
}


def virtPodmanOp [cmd] {
  let kubeDirPath = '/etc/containers/systemd'

  for pod in (\$env.VIRT_INSTANCES | each { |p| (\$p | split row '/') | first } | uniq) {
    if not (\$"(\$kubeDirPath)/(\$pod).kube" | path exists) {
      continue
    }

    opPrintMaybeRunCmd sudo systemctl stop \$"(\$pod).service"

    let addPath = \$env.REQ_PATH | str replace '/sync' '/add' | str replace '/sh/nu/' '/sh/nu/--yes/'
    let addUrl = \$"(\$env.REQ_ORIG)(\$addPath)(\$env.REQ_SRCH)"
    opPrintCmd nu --no-config-file -c '\$"(' http get --raw --redirect-mode follow \$"r#'(\$addUrl)'#" ')"'
    if 'NOOP' not-in \$env {
      nu --no-config-file -c \$"(http get --raw --redirect-mode follow \$addUrl)"
    }
  }
}


def virtPodman [] {
  let cmd = 'podman'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$cmd | is-empty) {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtPodmanOp \$cmd
}


def virtQemuOp [cmd] {
  for instance in \$env.VIRT_INSTANCES {
    if not (\$"/etc/systemd/system/qemu-(\$instance).service" | path exists) {
      continue
    }

    opPrintMaybeRunCmd sudo systemctl stop \$"qemu-(\$instance)"

    let addPath = \$env.REQ_PATH | str replace '/sync' '/add' | str replace '/sh/nu/' '/sh/nu/--yes/'
    let addUrl = \$"(\$env.REQ_ORIG)(\$addPath)(\$env.REQ_SRCH)"
    opPrintCmd nu --no-config-file -c '\$"(' http get --raw --redirect-mode follow \$"r#'(\$addUrl)'#" ')"'
    if 'NOOP' not-in \$env {
      nu --no-config-file -c \$"(http get --raw --redirect-mode follow \$addUrl)"
    }
  }
}


def virtQemu [] {
  let cmd = 'qemu'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$"(\$cmd)-img" | is-empty) {
    return
  }
  if \$env.VIRT_OP == 'tidy' {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtQemuOp \$cmd
}


\$env.VIRT_PODMAN_NETWORKS = r#'{"net0":{"driver":"bridge","interface":"br0","ipam":"dhcp","options":{"mode":"unmanaged"}}}'#
\`
`;

snapshot[`nu / linux / tidy 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/tidy?sysOsPlat=linux'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/tidy'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux'#

\$env.VIRT_OP = r#'tidy'#

def deepMerge [base, override] {
  mut result = \$base
  for kv in (\$override | transpose key value) {
    if (\$kv.key in \$result) {
      let baseVal = \$result | get \$kv.key
      let baseDesc = (\$baseVal | describe)
      let overrideDesc = (\$kv.value | describe)
      if (\$baseDesc | str starts-with 'record') and (\$overrideDesc | str starts-with 'record') {
        \$result = \$result | upsert \$kv.key (deepMerge \$baseVal \$kv.value)
      } else if (\$baseDesc | str starts-with 'list') and (\$overrideDesc | str starts-with 'list') {
        \$result = \$result | upsert \$kv.key (\$baseVal | append \$kv.value)
      } else {
        \$result = \$result | upsert \$kv.key \$kv.value
      }
    } else {
      \$result = \$result | upsert \$kv.key \$kv.value
    }
  }
  \$result
}


def virtDockerOp [cmd] {
  opPrintMaybeRunCmd sudo \$cmd system prune --all
}


def virtDocker [] {
  let cmd = 'docker'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$cmd | is-empty) {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtDockerOp \$cmd
}


def virtLxcOp [cmd] {}


def virtLxc [] {
  let cmd = 'lxc'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$"(\$cmd)-ls" | is-empty) {
    return
  }
  if \$env.VIRT_OP == 'tidy' {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtLxcOp \$cmd
}


def virtPodmanOp [cmd] {
  opPrintMaybeRunCmd sudo \$cmd system prune --all
}


def virtPodman [] {
  let cmd = 'podman'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$cmd | is-empty) {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtPodmanOp \$cmd
}


def virtQemuOp [cmd] {}


def virtQemu [] {
  let cmd = 'qemu'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$"(\$cmd)-img" | is-empty) {
    return
  }
  if \$env.VIRT_OP == 'tidy' {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtQemuOp \$cmd
}


\$env.VIRT_PODMAN_NETWORKS = r#'{"net0":{"driver":"bridge","interface":"br0","ipam":"dhcp","options":{"mode":"unmanaged"}}}'#
\`
`;

snapshot[`nu / darwin / add 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/add?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/virt/add'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

opPrintInfo r#'id: wut virt add | add on local
aliases: a, ad, in, install
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / darwin / find 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/find?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/virt/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

\$env.VIRT_OP = r#'find'#

do {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use virt (remote) [y, [n]]: '#
  }
  if \$yn != 'n' {
  }
}
\`
`;

snapshot[`nu / darwin / list 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/list?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/virt/list'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

\$env.VIRT_OP = r#'list'#

def deepMerge [base, override] {
  mut result = \$base
  for kv in (\$override | transpose key value) {
    if (\$kv.key in \$result) {
      let baseVal = \$result | get \$kv.key
      let baseDesc = (\$baseVal | describe)
      let overrideDesc = (\$kv.value | describe)
      if (\$baseDesc | str starts-with 'record') and (\$overrideDesc | str starts-with 'record') {
        \$result = \$result | upsert \$kv.key (deepMerge \$baseVal \$kv.value)
      } else if (\$baseDesc | str starts-with 'list') and (\$overrideDesc | str starts-with 'list') {
        \$result = \$result | upsert \$kv.key (\$baseVal | append \$kv.value)
      } else {
        \$result = \$result | upsert \$kv.key \$kv.value
      }
    } else {
      \$result = \$result | upsert \$kv.key \$kv.value
    }
  }
  \$result
}

\`
`;

snapshot[`nu / darwin / rem 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/rem?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/virt/rem'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

opPrintInfo r#'id: wut virt rem | remove on local
aliases: r, rm, rem, remove, un, unin, uninstall
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / darwin / sync 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/sync?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/virt/sync'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

\$env.VIRT_OP = r#'sync'#

def deepMerge [base, override] {
  mut result = \$base
  for kv in (\$override | transpose key value) {
    if (\$kv.key in \$result) {
      let baseVal = \$result | get \$kv.key
      let baseDesc = (\$baseVal | describe)
      let overrideDesc = (\$kv.value | describe)
      if (\$baseDesc | str starts-with 'record') and (\$overrideDesc | str starts-with 'record') {
        \$result = \$result | upsert \$kv.key (deepMerge \$baseVal \$kv.value)
      } else if (\$baseDesc | str starts-with 'list') and (\$overrideDesc | str starts-with 'list') {
        \$result = \$result | upsert \$kv.key (\$baseVal | append \$kv.value)
      } else {
        \$result = \$result | upsert \$kv.key \$kv.value
      }
    } else {
      \$result = \$result | upsert \$kv.key \$kv.value
    }
  }
  \$result
}

\`
`;

snapshot[`nu / darwin / tidy 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/tidy?sysOsPlat=darwin'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'darwin'#

\$env.REQ_PATH = r#'/sh/nu/virt/tidy'#

\$env.REQ_SRCH = r#'?sysOsPlat=darwin'#

\$env.VIRT_OP = r#'tidy'#

def deepMerge [base, override] {
  mut result = \$base
  for kv in (\$override | transpose key value) {
    if (\$kv.key in \$result) {
      let baseVal = \$result | get \$kv.key
      let baseDesc = (\$baseVal | describe)
      let overrideDesc = (\$kv.value | describe)
      if (\$baseDesc | str starts-with 'record') and (\$overrideDesc | str starts-with 'record') {
        \$result = \$result | upsert \$kv.key (deepMerge \$baseVal \$kv.value)
      } else if (\$baseDesc | str starts-with 'list') and (\$overrideDesc | str starts-with 'list') {
        \$result = \$result | upsert \$kv.key (\$baseVal | append \$kv.value)
      } else {
        \$result = \$result | upsert \$kv.key \$kv.value
      }
    } else {
      \$result = \$result | upsert \$kv.key \$kv.value
    }
  }
  \$result
}

\`
`;

snapshot[`nu / winnt / add 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/add?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/virt/add'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

opPrintInfo r#'id: wut virt add | add on local
aliases: a, ad, in, install
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / winnt / find 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/find?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/virt/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

\$env.VIRT_OP = r#'find'#

do {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use virt (remote) [y, [n]]: '#
  }
  if \$yn != 'n' {
  }
}
\`
`;

snapshot[`nu / winnt / list 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/list?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/virt/list'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

\$env.VIRT_OP = r#'list'#

def deepMerge [base, override] {
  mut result = \$base
  for kv in (\$override | transpose key value) {
    if (\$kv.key in \$result) {
      let baseVal = \$result | get \$kv.key
      let baseDesc = (\$baseVal | describe)
      let overrideDesc = (\$kv.value | describe)
      if (\$baseDesc | str starts-with 'record') and (\$overrideDesc | str starts-with 'record') {
        \$result = \$result | upsert \$kv.key (deepMerge \$baseVal \$kv.value)
      } else if (\$baseDesc | str starts-with 'list') and (\$overrideDesc | str starts-with 'list') {
        \$result = \$result | upsert \$kv.key (\$baseVal | append \$kv.value)
      } else {
        \$result = \$result | upsert \$kv.key \$kv.value
      }
    } else {
      \$result = \$result | upsert \$kv.key \$kv.value
    }
  }
  \$result
}

\`
`;

snapshot[`nu / winnt / rem 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/rem?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/virt/rem'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

opPrintInfo r#'id: wut virt rem | remove on local
aliases: r, rm, rem, remove, un, unin, uninstall
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / winnt / sync 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/sync?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/virt/sync'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

\$env.VIRT_OP = r#'sync'#

def deepMerge [base, override] {
  mut result = \$base
  for kv in (\$override | transpose key value) {
    if (\$kv.key in \$result) {
      let baseVal = \$result | get \$kv.key
      let baseDesc = (\$baseVal | describe)
      let overrideDesc = (\$kv.value | describe)
      if (\$baseDesc | str starts-with 'record') and (\$overrideDesc | str starts-with 'record') {
        \$result = \$result | upsert \$kv.key (deepMerge \$baseVal \$kv.value)
      } else if (\$baseDesc | str starts-with 'list') and (\$overrideDesc | str starts-with 'list') {
        \$result = \$result | upsert \$kv.key (\$baseVal | append \$kv.value)
      } else {
        \$result = \$result | upsert \$kv.key \$kv.value
      }
    } else {
      \$result = \$result | upsert \$kv.key \$kv.value
    }
  }
  \$result
}

\`
`;

snapshot[`nu / winnt / tidy 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/tidy?sysOsPlat=winnt'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'winnt'#

\$env.REQ_PATH = r#'/sh/nu/virt/tidy'#

\$env.REQ_SRCH = r#'?sysOsPlat=winnt'#

\$env.VIRT_OP = r#'tidy'#

def deepMerge [base, override] {
  mut result = \$base
  for kv in (\$override | transpose key value) {
    if (\$kv.key in \$result) {
      let baseVal = \$result | get \$kv.key
      let baseDesc = (\$baseVal | describe)
      let overrideDesc = (\$kv.value | describe)
      if (\$baseDesc | str starts-with 'record') and (\$overrideDesc | str starts-with 'record') {
        \$result = \$result | upsert \$kv.key (deepMerge \$baseVal \$kv.value)
      } else if (\$baseDesc | str starts-with 'list') and (\$overrideDesc | str starts-with 'list') {
        \$result = \$result | upsert \$kv.key (\$baseVal | append \$kv.value)
      } else {
        \$result = \$result | upsert \$kv.key \$kv.value
      }
    } else {
      \$result = \$result | upsert \$kv.key \$kv.value
    }
  }
  \$result
}

\`
`;

snapshot[`nu / linux / add (arch) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/add?sysOsPlat=linux&sysHost=arch'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.SYS_HOST = r#'arch'#

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/add'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&sysHost=arch'#

opPrintInfo r#'id: wut virt add | add on local
aliases: a, ad, in, install
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / linux / find (arch) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/find?sysOsPlat=linux&sysHost=arch'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.SYS_HOST = r#'arch'#

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/find'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&sysHost=arch'#

\$env.VIRT_OP = r#'find'#

do {
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input r#'? use virt (remote) [y, [n]]: '#
  }
  if \$yn != 'n' {
opPrint r#'lxc'#
opPrint r#'  alma, kali, void'#
opPrint r#'podman'#
opPrint r#'  home'#
opPrint r#'    ftpd, nfsd, smbd'#
opPrint r#'qemu'#
opPrint r#'  glass'#
  }
}
\`
`;

snapshot[`nu / linux / list (arch) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/list?sysOsPlat=linux&sysHost=arch'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.SYS_HOST = r#'arch'#

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/list'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&sysHost=arch'#

\$env.VIRT_OP = r#'list'#

def deepMerge [base, override] {
  mut result = \$base
  for kv in (\$override | transpose key value) {
    if (\$kv.key in \$result) {
      let baseVal = \$result | get \$kv.key
      let baseDesc = (\$baseVal | describe)
      let overrideDesc = (\$kv.value | describe)
      if (\$baseDesc | str starts-with 'record') and (\$overrideDesc | str starts-with 'record') {
        \$result = \$result | upsert \$kv.key (deepMerge \$baseVal \$kv.value)
      } else if (\$baseDesc | str starts-with 'list') and (\$overrideDesc | str starts-with 'list') {
        \$result = \$result | upsert \$kv.key (\$baseVal | append \$kv.value)
      } else {
        \$result = \$result | upsert \$kv.key \$kv.value
      }
    } else {
      \$result = \$result | upsert \$kv.key \$kv.value
    }
  }
  \$result
}


def virtDockerOp [cmd] {
  let filters = if (\$env.VIRT_INSTANCES | is-not-empty) { \$env.VIRT_INSTANCES } else { [] }
  let allInstances = ^sudo \$cmd compose ls --format json | complete | get stdout | if (\$in | is-not-empty) { from json | get Name } else { [] }
  let instances = if (\$filters | is-not-empty) {
    \$allInstances | where { |i| \$filters | all { |f| \$i | str contains \$f } }
  } else {
    \$allInstances
  }
  let nameFilters = \$instances | each { |i| ['--filter', \$"name=(\$i)"] } | flatten
  opPrintMaybeRunCmd sudo \$cmd container ls --all --format '"table {{.Names}}\\\\\\\\t{{.Image}}\\\\\\\\t{{.Ports}}\\\\\\\\t{{.State}}\\\\\\\\t{{.Status}}"' --no-trunc ...\$nameFilters
}


def virtDocker [] {
  let cmd = 'docker'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$cmd | is-empty) {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtDockerOp \$cmd
}


def virtLxcOp [cmd] {
  let filters = if (\$env.VIRT_INSTANCES | is-not-empty) { \$env.VIRT_INSTANCES } else { [] }
  let allInstances = ^sudo \$"(\$cmd)-ls" | complete | get stdout | split row ' ' | str trim | where { is-not-empty }
  let instances = if (\$filters | is-not-empty) {
    \$allInstances | where { |i| \$filters | all { |f| \$i | str contains \$f } }
  } else {
    \$allInstances
  }
  for instance in \$instances {
    opPrintMaybeRunCmd sudo \$"(\$cmd)-ls" --fancy --fancy-format '"NAME,IPV4,IPV6,STATE,AUTOSTART"' -- \$instance
  }
}


def virtLxc [] {
  let cmd = 'lxc'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$"(\$cmd)-ls" | is-empty) {
    return
  }
  if \$env.VIRT_OP == 'tidy' {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtLxcOp \$cmd
}


def virtPodmanOp [cmd] {
  let kubeDirPath = '/etc/containers/systemd'
  for pod in (if (\$kubeDirPath | path exists) {
    ls \$kubeDirPath
      | where name =~ '\\\\.kube\$'
      | get name
      | each { |f| \$f | path basename | str replace '.kube' '' }
      | if (\$env.VIRT_INSTANCES | is-not-empty) { where { |p| \$env.VIRT_INSTANCES | all { |f| \$p | str contains \$f } } } else { \$in }
  } else { [] }) {
    try { opPrintMaybeRunCmd sudo systemctl status --no-pager --lines 0 \$"(\$pod).service" }
    opPrintMaybeRunCmd sudo \$cmd pod list --filter \$"name=(\$pod)" --format '"table {{.Name}}\\\\t{{.Status}}\\\\t{{.Created}}\\\\t{{.NumberOfContainers}}"'
    opPrintMaybeRunCmd sudo \$cmd container list --filter \$"pod=(\$pod)" --format '"table {{.PodName}}\\\\t{{.Names}}\\\\t{{.Image}}\\\\t{{.Ports}}\\\\t{{.State}}\\\\t{{.Status}}"'
  }
}


def virtPodman [] {
  let cmd = 'podman'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$cmd | is-empty) {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtPodmanOp \$cmd
}


def virtQemuOp [cmd] {
  let serviceDirPath = '/etc/systemd/system'
  for instance in (if (\$serviceDirPath | path exists) {
    ls \$serviceDirPath
      | where name =~ '/qemu-[^/]+\\\\.service\$'
      | get name
      | each { |f| \$f | path basename | str replace 'qemu-' '' | str replace '.service' '' }
      | if (\$env.VIRT_INSTANCES | is-not-empty) { where { |i| \$env.VIRT_INSTANCES | all { |f| \$i | str contains \$f } } } else { \$in }
  } else { [] }) {
    try { opPrintMaybeRunCmd sudo systemctl status --no-pager --lines 0 \$"qemu-(\$instance).service" }
    try { opPrintMaybeRunCmd pgrep --ignore-ancestors --full --list-full \$"^swtpm.*(\$instance)" }
    try { opPrintMaybeRunCmd pgrep --ignore-ancestors --full --list-full \$"^qemu-system.*(\$instance)" }
  }
}


def virtQemu [] {
  let cmd = 'qemu'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$"(\$cmd)-img" | is-empty) {
    return
  }
  if \$env.VIRT_OP == 'tidy' {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtQemuOp \$cmd
}


\$env.VIRT_PODMAN_NETWORKS = r#'{"net0":{"driver":"bridge","interface":"br0","ipam":"dhcp","options":{"mode":"unmanaged"}}}'#

\$env.VIRT_MANAGER = r#'docker'#

\$env.VIRT_INSTANCES = [  ]

virtDocker

hide-env VIRT_MANAGER

\$env.VIRT_MANAGER = r#'lxc'#

\$env.VIRT_INSTANCES = [  ]

virtLxc

hide-env VIRT_MANAGER

\$env.VIRT_MANAGER = r#'podman'#

\$env.VIRT_INSTANCES = [  ]

virtPodman

hide-env VIRT_MANAGER

\$env.VIRT_MANAGER = r#'qemu'#

\$env.VIRT_INSTANCES = [  ]

virtQemu

hide-env VIRT_MANAGER
\`
`;

snapshot[`nu / linux / list (arch podman) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/list/podman?sysOsPlat=linux&sysHost=arch'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.SYS_HOST = r#'arch'#

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/list/podman'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&sysHost=arch'#

\$env.VIRT_LIST_PARTS = r#'podman'#

\$env.VIRT_OP = r#'list'#

def deepMerge [base, override] {
  mut result = \$base
  for kv in (\$override | transpose key value) {
    if (\$kv.key in \$result) {
      let baseVal = \$result | get \$kv.key
      let baseDesc = (\$baseVal | describe)
      let overrideDesc = (\$kv.value | describe)
      if (\$baseDesc | str starts-with 'record') and (\$overrideDesc | str starts-with 'record') {
        \$result = \$result | upsert \$kv.key (deepMerge \$baseVal \$kv.value)
      } else if (\$baseDesc | str starts-with 'list') and (\$overrideDesc | str starts-with 'list') {
        \$result = \$result | upsert \$kv.key (\$baseVal | append \$kv.value)
      } else {
        \$result = \$result | upsert \$kv.key \$kv.value
      }
    } else {
      \$result = \$result | upsert \$kv.key \$kv.value
    }
  }
  \$result
}


def virtDockerOp [cmd] {
  let filters = if (\$env.VIRT_INSTANCES | is-not-empty) { \$env.VIRT_INSTANCES } else { [] }
  let allInstances = ^sudo \$cmd compose ls --format json | complete | get stdout | if (\$in | is-not-empty) { from json | get Name } else { [] }
  let instances = if (\$filters | is-not-empty) {
    \$allInstances | where { |i| \$filters | all { |f| \$i | str contains \$f } }
  } else {
    \$allInstances
  }
  let nameFilters = \$instances | each { |i| ['--filter', \$"name=(\$i)"] } | flatten
  opPrintMaybeRunCmd sudo \$cmd container ls --all --format '"table {{.Names}}\\\\\\\\t{{.Image}}\\\\\\\\t{{.Ports}}\\\\\\\\t{{.State}}\\\\\\\\t{{.Status}}"' --no-trunc ...\$nameFilters
}


def virtDocker [] {
  let cmd = 'docker'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$cmd | is-empty) {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtDockerOp \$cmd
}


def virtLxcOp [cmd] {
  let filters = if (\$env.VIRT_INSTANCES | is-not-empty) { \$env.VIRT_INSTANCES } else { [] }
  let allInstances = ^sudo \$"(\$cmd)-ls" | complete | get stdout | split row ' ' | str trim | where { is-not-empty }
  let instances = if (\$filters | is-not-empty) {
    \$allInstances | where { |i| \$filters | all { |f| \$i | str contains \$f } }
  } else {
    \$allInstances
  }
  for instance in \$instances {
    opPrintMaybeRunCmd sudo \$"(\$cmd)-ls" --fancy --fancy-format '"NAME,IPV4,IPV6,STATE,AUTOSTART"' -- \$instance
  }
}


def virtLxc [] {
  let cmd = 'lxc'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$"(\$cmd)-ls" | is-empty) {
    return
  }
  if \$env.VIRT_OP == 'tidy' {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtLxcOp \$cmd
}


def virtPodmanOp [cmd] {
  let kubeDirPath = '/etc/containers/systemd'
  for pod in (if (\$kubeDirPath | path exists) {
    ls \$kubeDirPath
      | where name =~ '\\\\.kube\$'
      | get name
      | each { |f| \$f | path basename | str replace '.kube' '' }
      | if (\$env.VIRT_INSTANCES | is-not-empty) { where { |p| \$env.VIRT_INSTANCES | all { |f| \$p | str contains \$f } } } else { \$in }
  } else { [] }) {
    try { opPrintMaybeRunCmd sudo systemctl status --no-pager --lines 0 \$"(\$pod).service" }
    opPrintMaybeRunCmd sudo \$cmd pod list --filter \$"name=(\$pod)" --format '"table {{.Name}}\\\\t{{.Status}}\\\\t{{.Created}}\\\\t{{.NumberOfContainers}}"'
    opPrintMaybeRunCmd sudo \$cmd container list --filter \$"pod=(\$pod)" --format '"table {{.PodName}}\\\\t{{.Names}}\\\\t{{.Image}}\\\\t{{.Ports}}\\\\t{{.State}}\\\\t{{.Status}}"'
  }
}


def virtPodman [] {
  let cmd = 'podman'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$cmd | is-empty) {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtPodmanOp \$cmd
}


def virtQemuOp [cmd] {
  let serviceDirPath = '/etc/systemd/system'
  for instance in (if (\$serviceDirPath | path exists) {
    ls \$serviceDirPath
      | where name =~ '/qemu-[^/]+\\\\.service\$'
      | get name
      | each { |f| \$f | path basename | str replace 'qemu-' '' | str replace '.service' '' }
      | if (\$env.VIRT_INSTANCES | is-not-empty) { where { |i| \$env.VIRT_INSTANCES | all { |f| \$i | str contains \$f } } } else { \$in }
  } else { [] }) {
    try { opPrintMaybeRunCmd sudo systemctl status --no-pager --lines 0 \$"qemu-(\$instance).service" }
    try { opPrintMaybeRunCmd pgrep --ignore-ancestors --full --list-full \$"^swtpm.*(\$instance)" }
    try { opPrintMaybeRunCmd pgrep --ignore-ancestors --full --list-full \$"^qemu-system.*(\$instance)" }
  }
}


def virtQemu [] {
  let cmd = 'qemu'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$"(\$cmd)-img" | is-empty) {
    return
  }
  if \$env.VIRT_OP == 'tidy' {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtQemuOp \$cmd
}


\$env.VIRT_PODMAN_NETWORKS = r#'{"net0":{"driver":"bridge","interface":"br0","ipam":"dhcp","options":{"mode":"unmanaged"}}}'#

\$env.VIRT_MANAGER = r#'podman'#

\$env.VIRT_INSTANCES = [  ]

virtPodman

hide-env VIRT_MANAGER
\`
`;

snapshot[`nu / linux / rem (arch) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/rem?sysOsPlat=linux&sysHost=arch'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.SYS_HOST = r#'arch'#

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/rem'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&sysHost=arch'#

opPrintInfo r#'id: wut virt rem | remove on local
aliases: r, rm, rem, remove, un, unin, uninstall
arguments:
  - <parts> | path part(s) to match'#
\`
`;

snapshot[`nu / linux / sync (arch) 1`] = `
\`\$env.REQ_URL_CFG = r#'http://x/cfg'#

\$env.REQ_URL_SH = r#'http://x/sh/nu/virt/sync?sysOsPlat=linux&sysHost=arch'#

def opPrint --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  \$"(\$args | str join ' ')" | print
}

def opPrintErr --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print --stderr
    return
  }

  \$"(ansi red)(\$args | str join ' ')(ansi reset)" | print --stderr
}

def opPrintSucc --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi green)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintWarn --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi yellow)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintInfo --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi blue)(\$args | str join ' ')(ansi reset)" | print
}

def opPrintCmd --wrapped [...args] {
  if 'SUCCINCT' in \$env {
    return
  }
  if 'GRAYSCALE' in \$env {
    \$"(\$args | str join ' ')" | print
    return
  }

  \$"(ansi magenta)(\$args | first)(ansi reset)" | print --no-newline
  if (\$args | length) > 1 {
    \$" (ansi cyan)(\$args | skip 1 | str join ' ')(ansi reset)" | print
  }
}

def opRunCmd --wrapped [...args] {
  nu --no-config-file -c \$"(\$args | str join ' ')"
}

def opPrintRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  opRunCmd ...\$args
}

def opPrintMaybeRunCmd --wrapped [...args] {
  opPrintCmd ...\$args
  if 'NOOP' not-in \$env {
    opRunCmd ...\$args
  }
}


\$env.SH_VERS_MAJOR = 0

\$env.SH_VERS_MINOR = 111

do {
  let major = \$env.SH_VERS_MAJOR | into int
  let minor = \$env.SH_VERS_MINOR | into int

  if ((version | get major) < \$major) or ((version | get minor) < \$minor) {
    opPrintErr \$"nu must be >= '(\$major).(\$minor)' .. found '(version | get version)' .. aborting"
    exit 1
  }
}


\$env.SYS_HOST = r#'arch'#

\$env.REQ_ORIG = r#'http://x'#

\$env.SYS_OS_PLAT = r#'linux'#

\$env.REQ_PATH = r#'/sh/nu/virt/sync'#

\$env.REQ_SRCH = r#'?sysOsPlat=linux&sysHost=arch'#

\$env.VIRT_OP = r#'sync'#

def deepMerge [base, override] {
  mut result = \$base
  for kv in (\$override | transpose key value) {
    if (\$kv.key in \$result) {
      let baseVal = \$result | get \$kv.key
      let baseDesc = (\$baseVal | describe)
      let overrideDesc = (\$kv.value | describe)
      if (\$baseDesc | str starts-with 'record') and (\$overrideDesc | str starts-with 'record') {
        \$result = \$result | upsert \$kv.key (deepMerge \$baseVal \$kv.value)
      } else if (\$baseDesc | str starts-with 'list') and (\$overrideDesc | str starts-with 'list') {
        \$result = \$result | upsert \$kv.key (\$baseVal | append \$kv.value)
      } else {
        \$result = \$result | upsert \$kv.key \$kv.value
      }
    } else {
      \$result = \$result | upsert \$kv.key \$kv.value
    }
  }
  \$result
}


def virtDockerOp [cmd] {
  for instance in \$env.VIRT_INSTANCES {
    opPrintMaybeRunCmd '\$"(' http get --raw --redirect-mode follow \$"r#'(\$env.REQ_URL_CFG)/virt/(\$env.SYS_HOST)/(\$cmd)/(\$instance).yaml'#" ')"' '|' sudo \$cmd compose --file - up --detach --pull always
  }
}


def virtDocker [] {
  let cmd = 'docker'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$cmd | is-empty) {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtDockerOp \$cmd
}


def virtLxcOp [cmd] {
  for instance in \$env.VIRT_INSTANCES {
    if not (\$"/var/lib/lxc/(\$instance)/config" | path exists) {
      continue
    }

    if (^sudo \$"(\$cmd)-ls" --running | complete | get stdout | split row ' ' | str trim | where { |l| \$l | is-not-empty } | any { |l| \$l == \$instance }) {
      opPrintMaybeRunCmd sudo \$"(\$cmd)-stop" --name \$instance
    }

    let addPath = \$env.REQ_PATH | str replace '/sync' '/add' | str replace '/sh/nu/' '/sh/nu/--yes/'
    let addUrl = \$"(\$env.REQ_ORIG)(\$addPath)(\$env.REQ_SRCH)"
    opPrintCmd nu --no-config-file -c '\$"(' http get --raw --redirect-mode follow \$"r#'(\$addUrl)'#" ')"'
    if 'NOOP' not-in \$env {
      nu --no-config-file -c \$"(http get --raw --redirect-mode follow \$addUrl)"
    }
  }
}


def virtLxc [] {
  let cmd = 'lxc'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$"(\$cmd)-ls" | is-empty) {
    return
  }
  if \$env.VIRT_OP == 'tidy' {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtLxcOp \$cmd
}


def virtPodmanOp [cmd] {
  let kubeDirPath = '/etc/containers/systemd'

  for pod in (\$env.VIRT_INSTANCES | each { |p| (\$p | split row '/') | first } | uniq) {
    if not (\$"(\$kubeDirPath)/(\$pod).kube" | path exists) {
      continue
    }

    opPrintMaybeRunCmd sudo systemctl stop \$"(\$pod).service"

    let addPath = \$env.REQ_PATH | str replace '/sync' '/add' | str replace '/sh/nu/' '/sh/nu/--yes/'
    let addUrl = \$"(\$env.REQ_ORIG)(\$addPath)(\$env.REQ_SRCH)"
    opPrintCmd nu --no-config-file -c '\$"(' http get --raw --redirect-mode follow \$"r#'(\$addUrl)'#" ')"'
    if 'NOOP' not-in \$env {
      nu --no-config-file -c \$"(http get --raw --redirect-mode follow \$addUrl)"
    }
  }
}


def virtPodman [] {
  let cmd = 'podman'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$cmd | is-empty) {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtPodmanOp \$cmd
}


def virtQemuOp [cmd] {
  for instance in \$env.VIRT_INSTANCES {
    if not (\$"/etc/systemd/system/qemu-(\$instance).service" | path exists) {
      continue
    }

    opPrintMaybeRunCmd sudo systemctl stop \$"qemu-(\$instance)"

    let addPath = \$env.REQ_PATH | str replace '/sync' '/add' | str replace '/sh/nu/' '/sh/nu/--yes/'
    let addUrl = \$"(\$env.REQ_ORIG)(\$addPath)(\$env.REQ_SRCH)"
    opPrintCmd nu --no-config-file -c '\$"(' http get --raw --redirect-mode follow \$"r#'(\$addUrl)'#" ')"'
    if 'NOOP' not-in \$env {
      nu --no-config-file -c \$"(http get --raw --redirect-mode follow \$addUrl)"
    }
  }
}


def virtQemu [] {
  let cmd = 'qemu'
  if ('VIRT_MANAGER' in \$env and \$env.VIRT_MANAGER != \$cmd) or (which \$"(\$cmd)-img" | is-empty) {
    return
  }
  if \$env.VIRT_OP == 'tidy' {
    return
  }
  mut yn = ''
  if 'YES' in \$env {
    \$yn = 'y'
  } else {
    \$yn = input \$"? use (\$cmd) \\\\(system\\\\) [y, [n]]: "
  }
  if \$yn == 'n' {
    return
  }
  virtQemuOp \$cmd
}


\$env.VIRT_PODMAN_NETWORKS = r#'{"net0":{"driver":"bridge","interface":"br0","ipam":"dhcp","options":{"mode":"unmanaged"}}}'#

\$env.VIRT_MANAGER = r#'lxc'#

\$env.VIRT_INSTANCES = [ r#'alma'#, r#'kali'#, r#'void'# ]

virtLxc

hide-env VIRT_MANAGER

\$env.VIRT_MANAGER = r#'podman'#

\$env.VIRT_INSTANCES = [ r#'home/ftpd'#, r#'home/nfsd'#, r#'home/smbd'# ]

virtPodman

hide-env VIRT_MANAGER

\$env.VIRT_MANAGER = r#'qemu'#

\$env.VIRT_INSTANCES = [ r#'glass'# ]

virtQemu

hide-env VIRT_MANAGER
\`
`;
